chore(agendamento consulta): mapeando cadastro de Paciente após cadastro do usuário

--- a/src/app/@modules/home/components/card-nova-consulta/card-nova-consulta.component.html
+++ b/src/app/@modules/home/components/card-nova-consulta/card-nova-consulta.component.html
@@ -103,9 +103,9 @@
                 </div>
               </ng-container>
             </div>
-            <div class="col-12">
+            <!-- <div class="col-12">
               <app-form-debug [form]="form"></app-form-debug>
-            </div>
+            </div> -->
           </form>
         </div>
       </div>
