--- a/src/app/@modules/home/components/card-nova-consulta/form-pre-cadastro-paciente/form-pre-cadastro-paciente.component.html
+++ b/src/app/@modules/home/components/card-nova-consulta/form-pre-cadastro-paciente/form-pre-cadastro-paciente.component.html
@@ -75,43 +75,70 @@
         </mat-error>
       </mat-form-field>
     </div>
-    <div class="col-12 col-md-4">
-      <p class="m-0 perfil">
-        Perfil: <span>{{ controlPerfil.value }}</span>
-      </p>
-    </div>
+
     <div class="col-12" *ngIf="messageError !== ''">
       <p class="m-0 is-invalid">[Error] {{ messageError }}</p>
     </div>
-    <div class="col-12 d-flex align-items-end justify-content-end pt-4">
-      <button mat-stroked-button class="btn btn-outline-secondary" (click)="back()" *ngIf="!novoPaciente" type="button">
-        <i class="feather icon-arrow-left"></i>
-        voltar
-      </button>
-      <button
-        mat-stroked-button
-        class="btn btn-outline-secondary"
-        (click)="closeModalAndResetForm(true, 'pre-cadastro')"
-        *ngIf="novoPaciente"
-      >
-        <i class="feather icon-x"></i>
-        cancelar
-      </button>
-      <button
-        type="button"
-        mat-stroked-button
-        class="btn btn-success ms-3"
-        (click)="submitPreCadastroPaciente(2)"
-        [disabled]="!form.valid || loading"
-      >
-        <i *ngIf="!loading" class="feather icon-check"></i>
-        <ng-container *ngIf="loading">
-          <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
-          <span class="sr-only">Aguarde...</span>
-        </ng-container>
-        <span *ngIf="!novoPaciente! && !loading">confirmar e continuar o Agendamento</span>
-        <span *ngIf="novoPaciente && !loading">salvar</span>
-      </button>
-    </div>
   </div>
+  <ng-container [formGroup]="formPaciente" novalidate>
+    <div class="row m-0 py-2">
+      <div class="col-12">
+        <h3 class="m-0">Dados Convênio <i>(Opcional)</i></h3>
+      </div>
+      <div class="col-6">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Descrição convênio</mat-label>
+          <input type="text" matInput autocomplete="off" formControlName="descConvenio" />
+        </mat-form-field>
+      </div>
+      <div class="col-6 col-md-4">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Nº Inscrição convênio</mat-label>
+          <input type="text" matInput autocomplete="off" formControlName="nuInscricaoConvenio" />
+        </mat-form-field>
+      </div>
+      <div class="col-12 col-md-4">
+        <p class="m-0 perfil">
+          Perfil: <span>{{ controlPerfil.value }}</span>
+        </p>
+      </div>
+      <div class="col-12 d-flex align-items-end justify-content-end pt-4">
+        <button
+          mat-stroked-button
+          class="btn btn-outline-secondary"
+          (click)="back()"
+          *ngIf="!novoPaciente"
+          type="button"
+        >
+          <i class="feather icon-arrow-left"></i>
+          voltar
+        </button>
+        <button
+          mat-stroked-button
+          class="btn btn-outline-secondary"
+          (click)="closeModalAndResetForm(true, 'pre-cadastro')"
+          *ngIf="novoPaciente"
+        >
+          <i class="feather icon-x"></i>
+          cancelar
+        </button>
+        <button
+          type="button"
+          mat-stroked-button
+          class="btn btn-success ms-3"
+          (click)="submitPreCadastroPaciente(2)"
+          [disabled]="!form.valid || loading"
+        >
+          <i *ngIf="!loading" class="feather icon-check"></i>
+          <ng-container *ngIf="loading">
+            <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+            <span class="sr-only">Aguarde...</span>
+          </ng-container>
+          <span *ngIf="!novoPaciente! && !loading">confirmar e continuar o Agendamento</span>
+          <span *ngIf="novoPaciente && !loading">salvar</span>
+        </button>
+      </div>
+      <!-- <app-form-debug [form]="formPaciente"></app-form-debug> -->
+    </div>
+  </ng-container>
 </form>
