chore: adição dos filtros de temporalidade e ajustes

--- a/src/app/@modules/home/components/card-nova-consulta/form-pre-cadastro-paciente/form-pre-cadastro-paciente.component.html
+++ b/src/app/@modules/home/components/card-nova-consulta/form-pre-cadastro-paciente/form-pre-cadastro-paciente.component.html
@@ -138,7 +138,7 @@
           <span *ngIf="novoPaciente && !loading">salvar</span>
         </button>
       </div>
-      <!-- <app-form-debug [form]="formPaciente"></app-form-debug> -->
+      <app-form-debug [form]="formPaciente"></app-form-debug>
     </div>
   </ng-container>
 </form>
