--- a/src/app/@modules/home/home.component.html
+++ b/src/app/@modules/home/home.component.html
@@ -22,7 +22,7 @@
               </app-card-content>
             </div>
             <div class="col-12 mt-3">
-              <app-table-consultas-home></app-table-consultas-home>
+              <app-table-consultas-home [perfil]="perfil" [idMedico]="idPerfil"></app-table-consultas-home>
             </div>
           </div>
           <!-- Cards rigth-->
@@ -61,7 +61,7 @@
       </div> -->
       <div class="row pb-3">
         <div class="col-12 mt-3">
-          <app-table-consultas-home></app-table-consultas-home>
+          <app-table-consultas-home [perfil]="perfil"></app-table-consultas-home>
         </div>
       </div>
     </div>
