--- a/src/app/@modules/paciente/components/table-pacientes/table-pacientes.component.scss
+++ b/src/app/@modules/paciente/components/table-pacientes/table-pacientes.component.scss
@@ -1,12 +1,1 @@
-::ng-deep .ngx-pagination {
-  li {
-    a {
-      color: #9ba5ae;
-    }
-  }
-  li.current {
-    border-bottom: 2px solid #4099ff !important;
-    background: transparent;
-    color: #50555a;
-  }
-}
+@import "../../../../../theme/paginate";
