--- a/src/app/@modules/home/components/card-nova-consulta/card-nova-consulta.component.html
+++ b/src/app/@modules/home/components/card-nova-consulta/card-nova-consulta.component.html
@@ -34,7 +34,7 @@
     </div>
   </div>
   <div class="md-body container p-0">
-    <div class="row m-0">
+    <div class="row m-0 h-100">
       <div class="col-4 shadow-sm px-0">
         <div class="bg-search pt-4">
           <form [formGroup]="form">
@@ -60,7 +60,14 @@
               <div class="col-md-12">
                 <mat-form-field appearance="outline" class="w-100">
                   <mat-label>Data</mat-label>
-                  <input type="text" matInput autocomplete="off" formControlName="dtInicio" />
+                  <input
+                    type="text"
+                    matInput
+                    autocomplete="off"
+                    formControlName="dtInicio"
+                    mask="00-00-0000"
+                    [dropSpecialCharacters]="false"
+                  />
                   <mat-error>
                     <app-error-control-message
                       [control]="form.controls.dtInicio"
@@ -163,12 +170,6 @@
                     </tbody>
                   </table>
                 </div>
-                <!-- Detalhes do paciente-->
-                <!-- <ng-container *ngIf="pacienteSelecionado">
-                  <div class="col-12">
-                    <app-detalhes-paciente-home [paciente]="pacienteSelecionado"></app-detalhes-paciente-home>
-                  </div>
-                </ng-container> -->
                 <div class="col-12 pt-2 text-center mb-4">
                   <h3 class="text-uppercase mb-1">Ou Cadastre um Novo Paciente</h3>
                   <button mat-stroked-button class="btn btn-outline-primary" (click)="setStep(1)">
