--- a/src/app/@modules/home/components/card-nova-consulta/card-nova-consulta.component.scss
+++ b/src/app/@modules/home/components/card-nova-consulta/card-nova-consulta.component.scss
@@ -23,13 +23,15 @@ $f_22: 22px;
 }
 
 .bg-search {
-  height: 500px;
+  // height: 500px;
+  height: 100%;
   background-color: #ecf0f5;
   width: 100%;
 }
 
 .height-row {
-  height: 435px;
+  // height: 435px;
+  height: 100%;
 }
 
 ::ng-deep .consulta-home {
