--- a/src/app/@modules/paciente/paciente.component.html
+++ b/src/app/@modules/paciente/paciente.component.html
@@ -1,7 +1,7 @@
 <div class="bg">
   <div class="container-fluid pt-3">
     <div class="row">
-      <div class="col-12 mb-3">
+      <div class="col-12 mb-3" *ngIf="perfil !== 'MEDICO'">
         <app-card-content>
           <div class="row">
             <div class="col-md-4">
