--- a/src/app/@modules/home/components/card-nova-consulta/card-nova-consulta.component.html
+++ b/src/app/@modules/home/components/card-nova-consulta/card-nova-consulta.component.html
@@ -125,7 +125,7 @@
                   <h3 class="text-uppercase mb-1">Selecione um Paciente já Cadastrado</h3>
                   <mat-form-field appearance="outline" class="w-100">
                     <mat-label>Pesquise paciente pelo nome ou CPF</mat-label>
-                    <mat-icon matSuffix>search</mat-icon>
+                    <mat-icon matSuffix>Buscar</mat-icon>
                     <input
                       type="text"
                       placeholder="Busque pelo nome do paciente"
