--- a/src/app/@modules/medicos/medicos.component.html
+++ b/src/app/@modules/medicos/medicos.component.html
@@ -26,9 +26,11 @@
                 type="button"
                 (click)="verificaIdBusca(formBusca.get('idEspecializacao').value)"
               >
-                Buscar
+                <i class="feather icon-search"></i> buscar
               </button>
-              <button class="btn btn-secondary me-3" type="button" (click)="clearForm()">Limpar</button>
+              <button class="btn btn-secondary me-3" type="button" (click)="clearForm()">
+                <i class="feather icon-x"></i> limpar
+              </button>
             </div>
             <div class="col-12 col-md-4"></div>
           </div>
