--- a/src/app/@modules/home/components/card-nova-consulta/form-pre-cadastro-paciente/form-pre-cadastro-paciente.component.html
+++ b/src/app/@modules/home/components/card-nova-consulta/form-pre-cadastro-paciente/form-pre-cadastro-paciente.component.html
@@ -3,6 +3,7 @@
     <div class="col-12">
       <h3 class="m-0">Novo Paciente</h3>
       <span>Pré-cadastro do paciente</span>
+      <hr class="my-2" />
     </div>
     <div class="col-12">
       <mat-form-field appearance="outline" class="w-100">
@@ -87,13 +88,13 @@
       </div>
       <div class="col-6">
         <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Descrição convênio</mat-label>
+          <mat-label>Nome</mat-label>
           <input type="text" matInput autocomplete="off" formControlName="descConvenio" />
         </mat-form-field>
       </div>
       <div class="col-6 col-md-4">
         <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Nº Inscrição convênio</mat-label>
+          <mat-label>Nº Inscrição</mat-label>
           <input type="text" matInput autocomplete="off" formControlName="nuInscricaoConvenio" />
         </mat-form-field>
       </div>
@@ -134,7 +135,7 @@
             <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
             <span class="sr-only">Aguarde...</span>
           </ng-container>
-          <span *ngIf="!novoPaciente! && !loading">confirmar e continuar o Agendamento</span>
+          <span *ngIf="!novoPaciente! && !loading">confirmar e continuar</span>
           <span *ngIf="novoPaciente && !loading">salvar</span>
         </button>
       </div>
