--- a/src/app/@modules/home/components/table-consultas-home/table-consultas-home.component.html
+++ b/src/app/@modules/home/components/table-consultas-home/table-consultas-home.component.html
@@ -60,11 +60,7 @@
             <span class="bold">Ativo</span>
           </td>
           <td>
-            <!-- <button  type="button"
-            mat-raised-button
-            color="primary"
-            class="btn btn-primary">visualizar</button> -->
-            <a> visualizar</a>
+            <a (click)="modal.show('detalhe-consulta')"> visualizar</a>
           </td>
         </tr>
       </tbody>
@@ -92,3 +88,8 @@
     </div>
   </div>
 </ng-template>
+<app-modal-animation modalID="detalhe-consulta" modalClass="md-effect-10">
+  <div class="md-body container p-0">
+    <app-detalhes-consulta></app-detalhes-consulta>
+  </div>
+</app-modal-animation>
