--- a/src/app/@modules/paciente/components/table-medico/table-medico.component.html
+++ b/src/app/@modules/paciente/components/table-medico/table-medico.component.html
@@ -83,9 +83,11 @@
 
 <!-- <app-loader *ngIf="loading"></app-loader> -->
 <ng-template #semregistro>
-  <div class="row m-0" *ngIf="!loading">
-    <div class="col-12 ps-1 mt-2 not-found">
-      <p class="m-0">Nenhum registro encontrado.</p>
+  <app-card-content *ngIf="!loading">
+    <div class="row m-0">
+      <div class="col-12 ps-1 mt-2 not-found">
+        <p class="m-0">Nenhum registro encontrado.</p>
+      </div>
     </div>
-  </div>
+  </app-card-content>
 </ng-template>
