--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -57,7 +57,10 @@
             </div>
             <br />
             <div class="w-100 d-flex justify-content-center">
-              <button class="btn btn-primary-tcc p-2" [disabled]="loginForm.invalid || isLoading">entrar</button>
+              <button class="btn btn-primary-tcc p-2" [disabled]="loginForm.invalid || isLoading">
+                <i class="feather icon-log-in me-2"></i>
+                <span>entrar</span>
+              </button>
             </div>
           </div>
         </form>
