--- a/src/app/shell/notification/notification.component.html
+++ b/src/app/shell/notification/notification.component.html
@@ -1,5 +1,5 @@
 <button mat-icon-button [matMenuTriggerFor]="notification">
-  <i class="feather icon-mail"></i>
+  <i class="feather icon-bell"></i>
   <span class="spinner-grow spinner-grow-sm" *ngIf="verifyProfilePending()"></span
   ><!-- *ngIf="perfil === 'MEDICO' || perfil === 'PACIENTE'"-->
 </button>
