--- a/src/app/@modules/cadastro/cadastro.component.html
+++ b/src/app/@modules/cadastro/cadastro.component.html
@@ -3,9 +3,6 @@
     <div class="col-12 mb-3">
       <app-card-content>
         <div class="row">
-          <div class="col-12 d-flex justify-content-between pe-0">
-            <h2 class="m-0">Busca</h2>
-          </div>
           <div class="col-md-5 col-sm-12">
             <mat-form-field appearance="outline" class="w-100">
               <mat-label>Pesquise pelo nome ou CPF</mat-label>
@@ -30,7 +27,10 @@
             </mat-form-field>
           </div>
           <div class="col-md-auto p-md-0 align-button col-sm-12">
-            <button class="btn btn-warning me-3" type="button">Buscar</button>
+            <button class="btn btn-warning me-3" type="button">
+              <i class="feather icon-search"></i>
+              <span>buscar</span>
+            </button>
             <app-form-cadastro-colaborador></app-form-cadastro-colaborador>
           </div>
         </div>
