--- a/src/app/@modules/home/components/card-nova-consulta/agendamento-consulta/agendamento-consulta.component.html
+++ b/src/app/@modules/home/components/card-nova-consulta/agendamento-consulta/agendamento-consulta.component.html
@@ -92,15 +92,15 @@
   <div class="col-12 d-flex align-items-end justify-content-end pt-3">
     <button mat-stroked-button class="btn btn-outline-secondary" (click)="back()">
       <i class="feather icon-arrow-left"></i>
-      Voltar
+      voltar
     </button>
     <button mat-stroked-button class="btn btn-danger ms-3" (click)="closeModalAndResetForm('agendar-consulta')">
       <i class="feather icon-x"></i>
-      Cancelar
+      cancelar
     </button>
     <button mat-stroked-button class="btn btn-success ms-3" (click)="confirmAgendamento(2)" [disabled]="loading">
       <i class="feather icon-check"></i>
-      Confirmar Agendamento
+      confirmar Agendamento
     </button>
   </div>
 </div>
