--- a/src/app/@modules/home/components/card-nova-consulta/form-pre-cadastro-paciente/form-pre-cadastro-paciente.component.scss
+++ b/src/app/@modules/home/components/card-nova-consulta/form-pre-cadastro-paciente/form-pre-cadastro-paciente.component.scss
@@ -9,3 +9,13 @@
     color: var(--tcc-gray);
   }
 }
+
+.close-modal {
+  color: #6c757d;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 0.7;
+    transition: 300ms;
+  }
+}
