--- a/src/app/@modules/medicos/medicos.component.html
+++ b/src/app/@modules/medicos/medicos.component.html
@@ -22,7 +22,7 @@
             </div>
             <div class="col-md-auto mt-2">
               <button
-                class="btn btn-primary me-3"
+                class="btn btn-warning me-3"
                 type="button"
                 (click)="verificaIdBusca(formBusca.get('idEspecializacao').value)"
               >
