--- a/src/app/@modules/paciente/components/form-novo-paciente/form-novo-paciente.component.html
+++ b/src/app/@modules/paciente/components/form-novo-paciente/form-novo-paciente.component.html
@@ -1,4 +1,7 @@
-<button class="btn btn-primary" (click)="modal.show('novo-paciente')">Novo paciente</button>
+<button class="btn btn-primary" (click)="modal.show('novo-paciente')">
+  <i class="feather icon-plus"></i>
+  <span>novo paciente</span>
+</button>
 <app-modal-animation modalID="novo-paciente" modalClass="md-effect-11">
   <div class="container md-body py-3">
     <div class="row novo-paciente">
