--- a/src/app/shell/nav-rigth/nav-rigth.component.html
+++ b/src/app/shell/nav-rigth/nav-rigth.component.html
@@ -4,7 +4,10 @@
   <button mat-icon-button [matMenuTriggerFor]="userMenu">
     <!-- <mat-icon>person</mat-icon> -->
     <img src="../../../assets/icon-profile.svg" alt="Profile" />
-    <!-- <span class="d-block">Nome</span> -->
+    <!-- <div>
+      <span class="text-capitalize">{{ splitNameUser() }}</span>
+      <span>{{ perfil }}</span>
+    </div> -->
   </button>
   <mat-menu #userMenu="matMenu">
     <div class="container profile">
