--- a/src/theme/_buttons.scss
+++ b/src/theme/_buttons.scss
@@ -1,5 +1,5 @@
 @import "./general";
-$f_weigth: 400;
+$f_weigth: 600;
 
 .btn-primary-tcc {
   background-color: var(--tcc-primary) !important;
@@ -52,20 +52,20 @@ $f_weigth: 400;
 .btn-success {
   background-color: var(--tcc-bg-success-progress) !important;
   color: var(--tcc-white) !important;
-  font-weight: 400 !important;
+  font-weight: $f_weigth !important;
   font-size: var(--f_16);
 }
 
 .btn-danger {
   background-color: var(--danger) !important;
   color: var(--tcc-white) !important;
-  font-weight: 400 !important;
+  font-weight: $f_weigth !important;
 }
 
 .btn-secondary {
   background-color: var(--tcc-secondary) !important;
   color: var(--tcc-white) !important;
-  font-weight: 400 !important;
+  font-weight: $f_weigth !important;
 }
 
 .btn-outline-secondary {
@@ -84,7 +84,7 @@ $f_weigth: 400;
 .btn-warning {
   background-color: var(--tcc-orange) !important;
   color: var(--tcc-white) !important;
-  font-weight: 400 !important;
+  font-weight: $f_weigth !important;
 }
 
 .btn-buscar {
