chore: implementando componente de consultas e ajustes

--- a/src/app/@modules/home/components/table-consultas-home/table-consultas-home.component.html
+++ b/src/app/@modules/home/components/table-consultas-home/table-consultas-home.component.html
@@ -60,7 +60,7 @@
             <span class="bold">Ativo</span>
           </td>
           <td>
-            <a (click)="modal.show('detalhe-consulta')"> visualizar</a>
+            <a (click)="openModalDetalhes('detalhe-consulta', consulta)"> visualizar</a>
           </td>
         </tr>
       </tbody>
@@ -90,6 +90,6 @@
 </ng-template>
 <app-modal-animation modalID="detalhe-consulta" modalClass="md-effect-10">
   <div class="md-body container p-0">
-    <app-detalhes-consulta></app-detalhes-consulta>
+    <app-detalhes-consulta [consulta]="consulta" (closeModal)="closeModal($event)"></app-detalhes-consulta>
   </div>
 </app-modal-animation>
