--- a/src/app/@modules/perfil/components/form-update-paciente/form-update-paciente.component.html
+++ b/src/app/@modules/perfil/components/form-update-paciente/form-update-paciente.component.html
@@ -3,14 +3,14 @@
   <mat-tab label="PERFIL">
     <app-tab-perfil [dadosUser]="dadosUser"></app-tab-perfil>
   </mat-tab>
-  <mat-tab label="CONVÊNIO">
+  <mat-tab label="CONVÊNIO E COMPARTILHAMENTO">
     <div class="row m-0 pt-4">
       <div class="col-12 col-md-4 mt-3 mt-md-0">
         <app-card-content isHeader="true">
           <div class="card-header">
             <div class="row m-0 py-2">
               <div class="col-12 d-flex justify-content-between align-items-center p-0">
-                <h4 class="m-0">Dados Convênio</h4>
+                <h4 class="m-0">Detalhes</h4>
               </div>
             </div>
           </div>
@@ -51,7 +51,7 @@
           <div class="card-header">
             <div class="row m-0 py-2">
               <div class="col-12 d-flex justify-content-between align-items-center p-0">
-                <h4 class="m-0">Dados Convênio</h4>
+                <h4 class="m-0">Atualizar Dados</h4>
               </div>
             </div>
           </div>
