--- a/src/app/components/detalhes-consulta/detalhes-consulta.component.scss
+++ b/src/app/components/detalhes-consulta/detalhes-consulta.component.scss
@@ -1,5 +1,10 @@
 .dados-medicos {
+  ul {
+    padding-left: none;
+  }
+
   li {
+    list-style: none;
     padding: 2px 0;
     span {
       color: var(--black);
@@ -8,5 +13,15 @@
     .id-atendimento {
       color: var(--tcc-primary);
     }
+  }
+}
+
+.close-icon {
+  color: var(--tcc-secondary);
+  cursor: pointer;
+
+  &:hover {
+    transition: 300ms;
+    opacity: 0.7;
   }
 }
