--- a/src/app/@modules/home/home.component.html
+++ b/src/app/@modules/home/home.component.html
@@ -12,12 +12,12 @@
                   <div class="col-12">
                     <h3 class="m-0 mb-3">Dados gerais</h3>
                   </div>
-                  <div class="col-8">
+                  <div class="col-12">
                     <app-identificacao-profissional></app-identificacao-profissional>
                   </div>
-                  <div class="col-4">
+                  <!-- <div class="col-4">
                     <app-dados-gerais-medico></app-dados-gerais-medico>
-                  </div>
+                  </div> -->
                 </div>
               </app-card-content>
             </div>
