--- a/src/app/@modules/consultas/consultas.component.html
+++ b/src/app/@modules/consultas/consultas.component.html
@@ -83,7 +83,7 @@
           </tbody>
         </table>
       </div>
-      <div class="col-12 d-flex justify-content-center">
+      <div class="col-12 d-flex justify-content-center" *ngIf="paginationVisible">
         <pagination-controls
           (pageChange)="pageChanged($event)"
           maxSize="5"
