--- a/src/theme/_table.scss
+++ b/src/theme/_table.scss
@@ -160,7 +160,8 @@
 
 .table-responsive {
   overflow-x: auto;
-  height: calc(100vh - 7rem);
+  // height: calc(100vh - 7rem);
+  height: auto;
   -webkit-overflow-scrolling: touch;
 }
 
