chore: retirando .env dos scripts

--- a/src/app/shell/shell.component.html
+++ b/src/app/shell/shell.component.html
@@ -72,9 +72,9 @@
             </a>
           </ng-container>
 
-          <a mat-list-item routerLink="/about" routerLinkActive="active" (click)="isMobile && sidenav.close()">
+          <!-- <a mat-list-item routerLink="/about" routerLinkActive="active" (click)="isMobile && sidenav.close()">
             <span>Temp</span>
-          </a>
+          </a> -->
           <ng-container *ngIf="perfil === 'ADMINISTRADOR' || perfil === 'AUXILIAR'">
             <a
               mat-list-item
